# WWD

./: DEPLOY.md  README.md
backend/: .env.example  INSTALL_MAC_MANUAL.md  install_mac.sh  requirements.txt
backend/app/: main.py
backend/app/api/: auth.py  collaboration.py  documents.py  documents_v2.py  knowledge.py  organizations.py  polish.py  styles.py  templates.py  writing.py
backend/app/core/: config.py  harness.py  llm_router.py  security.py  users.py
backend/app/db/: __init__.py  models.py
backend/app/models/: organization.py  polish_conversation.py
backend/app/services/: collaboration.py  document_db.py  export.py  knowledge.py  organization.py  policy.py  polish_conversation.py  style_learning.py  template.py  vector_search.py
backend/knowledge/: AGENTS.md
backend/knowledge/people/: 张三.md
backend/static/: collaboration_test.html
desktop/: index.html  package.json  vite.config.ts
desktop/src/: App.vue
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/icons/: generate_icon.py
desktop/src/components/: CollaborativeEditor.vue  PolishPanel.vue
desktop/src/router/: index.ts
desktop/src/utils/: api.ts
desktop/src/views/: Documents.vue  Knowledge.vue  Settings.vue  Templates.vue  Writing.vue
docs/: HEARTBEAT.md  KANBAN.md  LOCAL_SETUP.md  PROJECT_PLAN.md  tasks.json
